--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id "com.google.protobuf" version "0.8.17"
     id "org.jetbrains.kotlin.plugin.serialization" version "1.7.20"
+    id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
+    namespace 'com.example.android.findmybook'
     compileSdk 33
     buildToolsVersion "30.0.3"
 
@@ -19,6 +23,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -34,19 +41,22 @@ android {
     buildFeatures {
         compose true
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
     composeOptions {
         kotlinCompilerExtensionVersion = "1.3.2"
     }
 
-    namespace 'com.example.android.findmybook'
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    def appcompat_version = "1.5.1"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    def compose_ui_version = '1.1.1'
     implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation project(path: ':core:datastore')
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -70,13 +80,21 @@ dependencies {
     // Optional - Integration with ViewModels
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
 
+    def nav_version = "2.5.2"
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    // Jetpack Compose Integration
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
+
     //jetpack datastore
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
 
     // Starting from Protobuf 3.8.0, use the lite runtime library
-    implementation  "com.google.protobuf:protobuf-javalite:3.21.5"
+    implementation "com.google.protobuf:protobuf-javalite:3.21.5"
 
     // ViewModel
     def lifecycle_version = "2.6.0-alpha03"
@@ -89,4 +107,13 @@ dependencies {
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //di
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+
+    //image
+    implementation 'com.github.bumptech.glide:glide:4.14.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
 }
