--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,19 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'com.google.devtools.ksp' version '1.7.20-1.0.8'
 }
 
 android {
+    applicationVariants.all { variant ->
+        kotlin.sourceSets {
+            getByName(variant.name) {
+                kotlin.srcDir("build/generated/ksp/${variant.name}/kotlin")
+            }
+        }
+    }
     namespace 'com.example.android.findmybook'
     compileSdk 33
 
@@ -58,10 +66,13 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0-alpha01"
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    //viewmodel compose
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha03"
 
     //Added
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
@@ -82,11 +93,21 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
     //di
-    implementation "com.google.dagger:hilt-android:2.42"
-    kapt "com.google.dagger:hilt-compiler:2.42"
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
 
     //image
     implementation 'com.github.bumptech.glide:glide:4.14.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.1'
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
+
+    //navigation helper
+    implementation 'io.github.raamcosta.compose-destinations:animations-core:1.7.25-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.7.25-beta'
+}
+
+kapt {
+    correctErrorTypes true
 }
