--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
+        android:name=".presentation.BaseApplication"
         android:allowBackup="true"
         android:icon="@drawable/bookicon"
         android:label="@string/app_name"
